# Todo-CLI

./: README.md  pyproject.toml  requirements.txt
.claude/agents/: cli-app-developer.md  cli-application-agent.md  in-memory-data-manager-agent.md  task-management-agent.md
.claude/skills/cli-menu-system/: SKILL.md
phase1-cli-todo/: .gitignore  CLAUDE.md  pyproject.toml
phase1-cli-todo/.claude/: settings.local.json
phase1-cli-todo/.claude/agents/: python-project-scaffolding-agent.md  repository-pattern-expert.md
phase1-cli-todo/.claude/skills/data-validation/: SKILL.md
phase1-cli-todo/.claude/skills/test-generation/: SKILL.md
phase1-cli-todo/.specify/memory/: constitution.md
phase1-cli-todo/history/prompts/todo-cli-app/: 3-create-implementation-plan.plan.prompt.md  5-implement-all-tasks.implementation.prompt.md
phase1-cli-todo/specs/001-todo-cli-app/: data-model.md  quickstart.md  tasks.md
phase1-cli-todo/specs/001-todo-cli-app/checklists/: requirements.md
phase1-cli-todo/specs/001-todo-cli-app/contracts/: cli-commands.md
phase1-cli-todo/src/core/entities/: task.py
phase1-cli-todo/src/core/repositories/: task_repository.py
phase1-cli-todo/src/core/services/: todo_service.py
phase1-cli-todo/src/core/utils/: validation.py
phase1-cli-todo/src/interfaces/cli/: main.py
phase1-cli-todo/tests/integration/: test_cli_integration.py
phase1-cli-todo/tests/unit/core/: test_todo_service.py
specs/001-todo-cli-app/: plan.md  research.md  spec.md
src/core/: exceptions.py
src/interfaces/cli/: main.py
tests/integration/: test_cli_integration.py
(+7 files in other folders)
